Avoid line break in autocomplete address
git-svn-id: https://svn.origo.ethz.ch/swissmon/swissmon@479 035473d3-0685-4573-a6ed-08f8c3112c85

--- a/application/modules/area/css/area-select.css
+++ b/application/modules/area/css/area-select.css
@@ -90,3 +90,9 @@
 tr.even, tr.odd {
   cursor: pointer;
 }
+
+/* Avoid line break in autocomplete address */
+.ui-autocomplete {
+    overflow-y: auto;
+    width: 400px;
+}
